fix fullScreenEnterBtn z-index

--- a/src/components/posts/post/postMenu/postMenuStyles.css
+++ b/src/components/posts/post/postMenu/postMenuStyles.css
@@ -7,7 +7,7 @@
   padding-top: 0.5rem;
   padding-left: 1rem;
   padding-bottom: 1rem;
-  z-index: 11;
+  z-index: 0;
 }
 
 
